<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="search_location"
        android:enabled="true"
        android:icon="@drawable/ic_w_sunny"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sysadmindoc.nimbus"
            android:targetClass="com.sysadmindoc.nimbus.MainActivity"
            android:data="nimbus://locations" />
    </shortcut>

    <shortcut
        android:shortcutId="open_radar"
        android:enabled="true"
        android:icon="@drawable/ic_w_rain"
        android:shortcutShortLabel="@string/shortcut_radar"
        android:shortcutLongLabel="@string/shortcut_radar_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sysadmindoc.nimbus"
            android:targetClass="com.sysadmindoc.nimbus.MainActivity"
            android:data="nimbus://radar" />
    </shortcut>

    <shortcut
        android:shortcutId="open_settings"
        android:enabled="true"
        android:icon="@drawable/ic_w_cloudy"
        android:shortcutShortLabel="@string/shortcut_settings"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sysadmindoc.nimbus"
            android:targetClass="com.sysadmindoc.nimbus.MainActivity"
            android:data="nimbus://settings" />
    </shortcut>

</shortcuts>
